--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
   font-family: 'roboto', sans-serif;
 }
 
-active::after {
+.active::after {
   position: absolute;
   content: '';
   display: block;
@@ -76,6 +76,7 @@ active::after {
   width: 170px;
   height: 92px;
   border: 1px solid #AFB1B8;
+  border-radius: 4px;
   -webkit-transition-property: border;
   transition-property: border;
   -webkit-transition-duration: 250ms;
@@ -417,7 +418,7 @@ active::after {
   text-decoration: none;
 }
 
-.link .active {
+.link.active {
   color: var(--accent-color);
 }
 
@@ -786,9 +787,10 @@ active::after {
 
 .footer-soc__item:hover {
   background-color: var(--accent-color);
+  border-radius: 50%;
 }
 
-.footer-soc__item:focus {
+.footer-soc__item :focus {
   background-color: var(--accent-color);
 }
 
@@ -896,6 +898,7 @@ active::after {
 }
 
 .footer-join__button {
+  border: none;
   padding-left: 29px;
   width: 200px;
   height: 50px;
@@ -1288,9 +1291,11 @@ active::after {
 }
 
 .portfolio-section__button {
+  border: none;
   background-color: var(--btn-color-porfolio);
   border-radius: 4px;
   font-family: 'Roboto';
+  font-weight: 500;
   font-style: normal;
   font-size: 16px;
   line-height: 1.62;
@@ -1377,6 +1382,12 @@ active::after {
 }
 
 .portfolio-section__second-item:hover .portfolio-section__overlay {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+
+.portfolio-section__second-item :focus .portfolio-section__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   opacity: 1;
