--- a/sass/component/_box.scss
+++ b/sass/component/_box.scss
@@ -8,6 +8,7 @@
     width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
+    border-radius: 4px;
     transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
