--- a/sass/portfolio/_portfolio-card.scss
+++ b/sass/portfolio/_portfolio-card.scss
@@ -7,6 +7,7 @@
 
 
 .portfolio-section__second-item {
+    
     margin-right: 30px;
     &:nth-child(-n + 3) {
             margin-top: 0;
@@ -40,6 +41,11 @@
             transform: translateY(0);
             opacity: 1;
         }
+                .portfolio-section__second-item :focus& {
+                    transform: translateY(0);
+                    opacity: 1;
+                }
+             
 }
 
 
