--- a/sass/component/_active.scss
+++ b/sass/component/_active.scss
@@ -1,4 +1,4 @@
-active::after {
+.active::after {
     position: absolute;
     content: '';
     display: block;
@@ -7,5 +7,6 @@ active::after {
     width: 100%;
     height: 3px;
     border-radius: 2px;
-    background-color: var(--accent-color);
+    background-color: var(--accent-color); 
+    
 }
