--- a/sass/portfolio/_portfolio-button.scss
+++ b/sass/portfolio/_portfolio-button.scss
@@ -5,15 +5,18 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-section__fierst-item:not( :last-child) {
-    margin-right: 8px;
+.portfolio-section__fierst-item{ 
+    
+    &:not( :last-child) {
+            margin-right: 8px;
+        }
 }
-
 .portfolio-section__button {
-
+    border: none;
     background-color: var(--btn-color-porfolio);
     border-radius: 4px;
     font-family: 'Roboto';
+    font-weight: 500;
     font-style: normal;
     font-size: 16px;
     line-height: 1.62;
